﻿10.2.34.alpha.1 - 12th June 2024
- The War Within Beta: For 'Show unexplored areas', the 'Tint unexplored areas' setting is now available in the world map filter menu.

10.2.33 - 12th June 2024
- The War Within Beta: For 'Show unexplored areas', the 'Tint unexplored areas' setting is now available once again.

10.2.32 - 6th June 2024
- The War Within Beta: Update.

10.2.31 - 6th June 2024
- Preliminary update for The War Within Beta.

10.2.27 - 15th May 2024
- Updated deprecated functions.

10.2.26 - 8th May 2024
- Updated for game patch 10.2.7.
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

10.2.20 - 20th March 2024
- Updated for game patch 10.2.6.

10.2.18 - 6th March 2024
- For 'Show additional icons', added 'Badlands' portal icon to Valdrakken.

10.2.17 - 28th February 2024
- For 'Show additional icons', added 'Emerald Dream' portal icons to Valdrakken, Emerald Dream and Ohn'ahran Plains.

10.2.10 - 16th January 2024
- Preliminary update for game patch 10.2.5.

10.2.00 - 7th November 2023
- Preliminary update for game patch 10.2.0.
- Added Leatrix Maps to the minimap addon compartment menu.

10.1.28 - 1st November 2023
- PTR (10.2.0): Added map reveal data for 'Emerald Dream'.

10.1.27 -  25th September 2023
- Some internal code changes.

10.1.19 - 7th September 2023
- Updated for game version 10.1.7.

10.1.12 - 15th July 2023
- Added the 'Show additional icons' option once again.

10.1.11 - 12th July 2023
- Removed the 'Show additional icons' option.

10.1.10 - 12th July 2023
- Updated for game version 10.1.5.

10.1.08 - 28th June 2023
- Updated LibDBIcon.

10.1.06 - 11th May 2023
- The 'Enhance dungeon icons' option has been renamed 'Show additional icons'.  Dungeon and raid icons are now handled by the default UI and can be toggled in the map dropdown menu.

10.1.00 - 3rd May 2023
- Updated for game version 10.1.
- Added an icon for the in-game addon listing.

10.0.52 - 23rd March 2023